# caltrainSchedule

./: README.md
caltrain_display_project/: README.md  manual_test.py  pyproject.toml  setup.py  tests.py
caltrain_display_project/caltrain_display_project.egg-info/: PKG-INFO  SOURCES.txt
caltrain_display_project/src/: display_schedule.py  fetch_caltrain_data.py  main.py  parse_schedule.py
